[gd_scene load_steps=2 format=3 uid="uid://ckfea7f8nwdbh"]

[ext_resource type="Script" path="res://Inventory/UI/CraftItemPanel.gd" id="1_gxmwr"]

[node name="CraftItemContainer" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_gxmwr")

[node name="Separator2" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="ColorRect" type="ColorRect" parent="Separator2"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="CraftItemTitle" type="Label" parent="Separator2"]
layout_mode = 2
text = "Craft Item Title"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="Control" parent="."]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="RequirementsContainer" type="FlowContainer" parent="HBoxContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
vertical = true

[node name="CraftButton" type="Button" parent="HBoxContainer"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -114.0
offset_top = -15.0
offset_bottom = 16.0
grow_horizontal = 0
grow_vertical = 2
size_flags_vertical = 4
text = "Craft item"

[connection signal="tree_entered" from="HBoxContainer/RequirementsContainer" to="." method="_on_requirements_container_tree_entered"]
[connection signal="pressed" from="HBoxContainer/CraftButton" to="." method="_on_craft_button_pressed"]
